# i3lock-fancy-rapid

./: CMakeLists.txt  README.md  blur.c  blur.h  i3lock-fancy-rapid.c  operations.c  operations.h  screenshot.c  screenshot.h
